# ggc-s3-spooler

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  deploy.prod.yaml.example  deploy.staging.yaml.example  deploy.yaml.example  pyproject.toml  recipe-template.yaml  recipe.yaml  spooler.example.ini  spooler.ini
.github/workflows/: ci.yml  release.yml
docs/: 01-기능정의서.md  02-시스템사양서.md  03-아키텍처설계서.md  04-인터페이스설계서.md  05-상세설계사양서.md  06-배포가이드.md  07-클라이언트-통합-가이드.md  08-S3-스트림-관리-가이드.md
docs/examples/: stability_example.py
docs/reference/: aws-stream-manager-overview.md  greengrass-component-recipe.md  stream-manager-ipc-s3-guide.md
docs/research/: 01-latency-requirements-rationale.md  02-retention-period-rationale.md  03-spool-sizing-rationale.md  04-sdk-selection-rationale.md  05-processing-model-rationale.md  06-tgu-platform-constraints.md
scripts/: build_artifact.py  bump_version.py  deploy_aws.py  deploy_local.sh
src/spooler/: __init__.py  __main__.py  cleaner.py  client_protocol.py  config.py  file_stability.py  filename_codec.py  stream_client.py  watcher.py
src/spooler_testing/: __init__.py  metrics.py  mock_clients.py  protocol_helpers.py
tests/: conftest.py
tests/integration/: test_stability_integration.py  test_watcher_pipeline.py
tests/manual/: README.md  benchmark_high_load.py  debug_test.py  enhanced_benchmark.py  fixed_test.py  performance_dashboard.py  performance_reporter.py  simple_test.py
tests/unit/: test_cleaner.py  test_client_protocol.py  test_config_ini.py  test_file_stability.py  test_filename_codec.py  test_stream_client.py
(+6 files in other folders)
